Fix tons more warnings and dialogues